--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "json-server": "^0.17.4"
+    "json-server": "0.17.4"
   },
   "devDependencies": {
-    "dotenv": "^16.4.7",
-    "nodemon": "^3.1.9",
-    "prettier": "^3.4.2"
+    "dotenv": "^16.5.0",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3"
   }
 }
