--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "json-server": "0.17.4"
+    "json-server": "0.17.4",
+    "dotenv": "^17.0.0"
   },
   "devDependencies": {
-    "dotenv": "^16.5.0",
     "nodemon": "^3.1.10",
-    "prettier": "^3.5.3"
+    "prettier": "^3.6.2"
   }
 }
