--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "json-server": "0.17.4",
-    "dotenv": "^17.0.0"
+    "dotenv": "16.4.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
