Mock JWT Auth is done

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ NODE_PORT=8000
 ENABLE_BASIC_AUTH=true
 BASIC_AUTH_USERNAME=admin
 BASIC_AUTH_PASSWORD=your-secret-key
+JWT_SECRET_KEY=your-jwt-secret-key
