--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "16.4.5",
     "json-server": "0.17.4",
-    "dotenv": "16.4.5"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
