--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "16.4.5",
-    "json-server": "0.17.4",
+    "json-server": "1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
