--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Dynamic JSON Server for Quick APIs",
   "copyright": "Copyright 2025 Manikandan A",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "node dynamic-server.js",
     "start:v1": "node dynamic-server-v1.js",
@@ -22,7 +21,8 @@
     "json-server": "0.17.4",
     "json-server-beta": "npm:json-server@1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
-    "lowdb": "^7.0.1"
+    "lowdb": "^7.0.1",
+    "nanoid": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
